--- a/기출문제/6회/작업형2.ipynb
+++ b/기출문제/6회/작업형2.ipynb
@@ -1,21 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "JiFc-11Gk38n"
+      },
       "source": [
         "## 다중 분류 문제\n",
         "- 난방 부하 단계를 예측해주세요!\n",
@@ -35,55 +24,269 @@
         "\n",
         "### 답안 제출 참고\n",
         "- pd.read_csv('result.csv') 로 제출 코드 확인"
-      ],
-      "metadata": {
-        "id": "JiFc-11Gk38n"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "DO-sHoMUL7mN"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "il2i1B8YnZI3"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "_kkLqKabnZLW"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "ZAj62-qxnZNn"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
+      "execution_count": 39,
       "metadata": {
         "id": "Rwt-0srlnZQj"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "F1:  0.9732572391395922\n",
+            "정확도:  0.9753086419753086\n"
+          ]
+        }
+      ],
+      "source": [
+        "import pandas as pd\n",
+        "train = pd.read_csv('train.csv')\n",
+        "test = pd.read_csv('test.csv')\n",
+        "\n",
+        "# print(train.shape, test.shape)\n",
+        "# (537, 10) (231, 9)\n",
+        "\n",
+        "# print(train.head())\n",
+        "#    Compac  Surf_Area  Wall_Area    Roof Height Orient  Glaze_Area  \\\n",
+        "# 0    0.74      686.0      245.0   220.5  Short  South        0.25   \n",
+        "# 1    0.98      514.5      294.0   Small   Tall  South        0.40   \n",
+        "# 2    0.90      563.5      318.5  Medium   Tall   West        0.25   \n",
+        "# 3    0.74      686.0      245.0   220.5  Short  South        0.25   \n",
+        "# 4    0.98      514.5      294.0   Small   Tall   East        0.25   \n",
+        "\n",
+        "#    Glaze_Distr  Cool_Load Heat_Load  \n",
+        "# 0            3      14.72  Very Low  \n",
+        "# 1            2      33.94      High  \n",
+        "# 2            1      37.58      High  \n",
+        "# 3            2      15.18  Very Low  \n",
+        "# 4            2      29.69      High  \n",
+        "# print(test.head())\n",
+        "#    Compac  Surf_Area  Wall_Area    Roof Height Orient  Glaze_Area  \\\n",
+        "# 0    0.64      784.0      343.0   220.5  Short  South        0.40   \n",
+        "# 1    0.82      612.5      318.5   Large   Tall  North        0.40   \n",
+        "# 2    0.76      661.5      416.5  Medium   Tall  South        0.10   \n",
+        "# 3    0.74      686.0      245.0   220.5  Short   East        0.40   \n",
+        "# 4    0.64      784.0      343.0   220.5  Short  North        0.25   \n",
+        "\n",
+        "#    Glaze_Distr  Cool_Load  \n",
+        "# 0            4      22.25  \n",
+        "# 1            3      32.43  \n",
+        "# 2            5      33.64  \n",
+        "# 3            1      17.25  \n",
+        "# 4            5      20.13  \n",
+        "# print(train.info())\n",
+        "#  0   Compac       537 non-null    float64\n",
+        "#  1   Surf_Area    537 non-null    float64\n",
+        "#  2   Wall_Area    537 non-null    float64\n",
+        "#  3   Roof         537 non-null    object \n",
+        "#  4   Height       537 non-null    object \n",
+        "#  5   Orient       537 non-null    object \n",
+        "#  6   Glaze_Area   537 non-null    float64\n",
+        "#  7   Glaze_Distr  537 non-null    int64  \n",
+        "#  8   Cool_Load    537 non-null    float64\n",
+        "#  9   Heat_Load    537 non-null    object \n",
+        "# print(train.describe())\n",
+        "#           Compac   Surf_Area   Wall_Area  Glaze_Area  Glaze_Distr   Cool_Load\n",
+        "# count  537.00000  537.000000  537.000000  537.000000   537.000000  537.000000\n",
+        "# mean     0.76879  667.796089  318.271881    0.237244     2.808194   24.939628\n",
+        "# std      0.10636   88.123635   42.447824    0.132183     1.541251    9.600170\n",
+        "# min      0.62000  514.500000  245.000000    0.000000     0.000000   11.170000\n",
+        "# 25%      0.69000  588.000000  294.000000    0.100000     2.000000   15.770000\n",
+        "# 50%      0.76000  661.500000  318.500000    0.250000     3.000000   25.160000\n",
+        "# 75%      0.86000  735.000000  343.000000    0.400000     4.000000   33.540000\n",
+        "# max      0.98000  808.500000  416.500000    0.400000     5.000000   48.030000\n",
+        "# print(train.describe(include=\"O\"))\n",
+        "#          Roof Height Orient Heat_Load\n",
+        "# count     537    537    537       537\n",
+        "# unique      4      2      4         5\n",
+        "# top     220.5   Tall  South  Very Low\n",
+        "# freq      257    280    145       142\n",
+        "\n",
+        "# print(test.isnull().sum()) -> 없음\n",
+        "\n",
+        "# 전처리\n",
+        "# 타겟 분류\n",
+        "target = train.pop('Heat_Load')\n",
+        "# print(target) -> 문제 없음\n",
+        "# print(train.shape, test.shape)\n",
+        "# (537, 9) (231, 9)\n",
+        "\n",
+        "# 1. 베이스 라인 F1:  0.9574016121384542 정확도:  0.9629629629629629\n",
+        "n_cols = train.select_dtypes(exclude=\"O\").columns\n",
+        "\n",
+        "# # 2. 범주형 선택 F1:  0.9438476603693994 정확도:  0.9506172839506173\n",
+        "# o_cols = train.select_dtypes(include=\"O\").columns\n",
+        "# from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
+        "\n",
+        "# for col in o_cols:\n",
+        "#     le = LabelEncoder()\n",
+        "#     train[col] = le.fit_transform(train[col])\n",
+        "#     test[col] = le.transform(test[col])\n",
+        "    \n",
+        "# # 3. 정규화 F1:  0.9438476603693994 정확도:  0.9506172839506173\n",
+        "# scaler = StandardScaler()\n",
+        "# train[n_cols] = scaler.fit_transform(train[n_cols])\n",
+        "# test[n_cols] = scaler.transform(test[n_cols])\n",
+        "\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "X_tr, X_val, y_tr, y_val = train_test_split(train[n_cols], target, test_size=0.15, random_state=2022)\n",
+        "\n",
+        "# 4. 하이퍼 파라미터 튜닝 F1:  0.9732572391395922 정확도:  0.9753086419753086\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.metrics import f1_score, accuracy_score\n",
+        "model = RandomForestClassifier(n_estimators=300, random_state=2022)\n",
+        "model.fit(X_tr, y_tr)\n",
+        "pred = model.predict(X_val)\n",
+        "print('F1: ', f1_score(y_val, pred, average='macro'))\n",
+        "print('정확도: ', accuracy_score(y_val, pred))\n",
+        "pred = model.predict(test[n_cols])\n",
+        "submit = pd.DataFrame(\n",
+        "    {\n",
+        "        'pred': pred\n",
+        "    }\n",
+        ")\n",
+        "submit.to_csv('작업형2제출.csv', index=False)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 41,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>pred</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Low</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>High</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>High</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Low</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Low</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>226</th>\n",
+              "      <td>Very Low</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>227</th>\n",
+              "      <td>Medium</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>228</th>\n",
+              "      <td>Very Low</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>229</th>\n",
+              "      <td>Low</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>230</th>\n",
+              "      <td>Very High</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>231 rows × 1 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "          pred\n",
+              "0          Low\n",
+              "1         High\n",
+              "2         High\n",
+              "3          Low\n",
+              "4          Low\n",
+              "..         ...\n",
+              "226   Very Low\n",
+              "227     Medium\n",
+              "228   Very Low\n",
+              "229        Low\n",
+              "230  Very High\n",
+              "\n",
+              "[231 rows x 1 columns]"
+            ]
+          },
+          "execution_count": 41,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df1 = pd.read_csv('작업형2제출.csv')\n",
+        "df1"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
-      "outputs": []
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.8.18"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
